--- a/yandexmapkitsample/src/main/AndroidManifest.xml
+++ b/yandexmapkitsample/src/main/AndroidManifest.xml
@@ -22,143 +22,13 @@
         android:icon="@drawable/icon"
         android:label="@string/app_name" >
         <activity
-            android:name=".YandexMapKitSampleActivity"
+            android:name=".YandexMapActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".defaultoverlay.DefaultOverlayActivity"
-            android:label="@string/sample1" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="yandex.intent.category.MAPKIT" />
-            </intent-filter>
-        </activity>
-        <activity
-            android:name=".balloonoverlay.two.BalloonOverlayActivity"
-            android:label="@string/sample2two" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="yandex.intent.category.MAPKIT" />
-            </intent-filter>
-        </activity>
-        <activity
-            android:name=".customoverlay.CustomOverlayActivity"
-            android:label="@string/sample3" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="yandex.intent.category.MAPKIT" />
-            </intent-filter>
-        </activity>
-        <activity
-            android:name=".draggableoverlay.DraggableOverlayActivity"
-            android:label="@string/sample4" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="yandex.intent.category.MAPKIT" />
-            </intent-filter>
-        </activity>
-        <activity
-            android:name=".jams.JamsActivity"
-            android:label="@string/sample5" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="yandex.intent.category.MAPKIT" />
-            </intent-filter>
-        </activity>
-        <activity
-            android:name=".maplayers.MapLayersActivity"
-            android:label="@string/sample6" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="yandex.intent.category.MAPKIT" />
-            </intent-filter>
-        </activity>
-        <activity
-            android:name=".maphd.MapHDTilesActivity"
-            android:label="@string/sample7" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="yandex.intent.category.MAPKIT" />
-            </intent-filter>
-        </activity>
-        <activity
-            android:name=".mapevent.MapEventActivity"
-            android:label="@string/sample8" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="yandex.intent.category.MAPKIT" />
-            </intent-filter>
-        </activity>
-        <activity
-            android:name=".scrollview.MapScrollViewActivity"
-            android:label="@string/sample9" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="yandex.intent.category.MAPKIT" />
-            </intent-filter>
-        </activity>
-        <activity
-            android:name=".listview.MapListViewActivity"
-            android:label="@string/sample10" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="yandex.intent.category.MAPKIT" />
-            </intent-filter>
-        </activity>
-        <activity
-            android:name=".mylocation.MapMyLocationChangeActivity"
-            android:label="@string/sample11" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="yandex.intent.category.MAPKIT" />
-            </intent-filter>
-        </activity>
-        <activity
-            android:name=".path.MapPathActivity"
-            android:label="@string/sample12" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="yandex.intent.category.MAPKIT" />
-            </intent-filter>
-        </activity>
-        <activity
-            android:name=".geocode.MapGeoCodeActivity"
-            android:label="@string/sample13" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="yandex.intent.category.MAPKIT" />
-            </intent-filter>
-        </activity>
-        
-        
-          <activity
-            android:name=".zoomspan.ZoomSpanActivity"
-            android:label="@string/sample14" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="yandex.intent.category.MAPKIT" />
-            </intent-filter>
-        </activity>
-
     </application>
 
 </manifest>
